Fixed a bug where Item and Block stack reduction wouldn't work